code/Phase3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR
    OPERATOR

Grammar

Rule 0     S' -> program
Rule 1     program -> declist MAIN LRB RRB block
Rule 2     program -> MAIN LRB RRB block
Rule 3     declist -> dec
Rule 4     declist -> declist dec
Rule 5     dec -> vardec
Rule 6     dec -> funcdec
Rule 7     type -> INTEGER
Rule 8     type -> FLOAT
Rule 9     type -> BOOLEAN
Rule 10    iddec -> ID
Rule 11    iddec -> ID LSB exp RSB
Rule 12    iddec -> ID ASSIGN exp
Rule 13    idlist -> iddec
Rule 14    idlist -> idlist COMMA iddec
Rule 15    vardec -> idlist COLON type SEMICOLON
Rule 16    funcdec -> FUNCTION ID LRB paramdecs RRB COLON type block
Rule 17    funcdec -> FUNCTION ID LRB RRB COLON type block
Rule 18    funcdec -> FUNCTION ID LRB paramdecs RRB block
Rule 19    funcdec -> FUNCTION ID LRB RRB block
Rule 20    paramdecs -> paramdecslist
Rule 21    paramdecslist -> paramdec
Rule 22    paramdecslist -> paramdecslist COMMA paramdec
Rule 23    paramdec -> ID COLON type
Rule 24    paramdec -> ID LSB RSB COLON type
Rule 25    block -> LCB stmtlist RCB
Rule 26    block -> LCB RCB
Rule 27    stmtlist -> stmt
Rule 28    stmtlist -> stmtlist stmt
Rule 29    case -> WHERE const COLON stmtlist
Rule 30    case -> WHERE const COLON
Rule 31    cases -> case
Rule 32    cases -> cases case
Rule 33    stmt -> RETURN exp SEMICOLON
Rule 34    stmt -> exp SEMICOLON
Rule 35    stmt -> block
Rule 36    stmt -> vardec
Rule 37    stmt -> WHILE LRB exp RRB stmt
Rule 38    stmt -> ON LRB exp RRB LCB cases RCB SEMICOLON
Rule 39    stmt -> ON LRB exp RRB LCB RCB SEMICOLON
Rule 40    stmt -> FOR LRB exp SEMICOLON exp SEMICOLON exp RRB stmt
Rule 41    stmt -> FOR LRB ID IN ID RRB stmt
Rule 42    stmt -> IF LRB exp RRB stmt elseiflist
Rule 43    stmt -> IF LRB exp RRB stmt
Rule 44    stmt -> IF LRB exp RRB stmt elseiflist ELSE stmt
Rule 45    stmt -> IF LRB exp RRB stmt ELSE stmt
Rule 46    stmt -> PRINT LRB ID RRB SEMICOLON
Rule 47    elseiflist -> ELSEIF LRB exp RRB stmt
Rule 48    elseiflist -> elseiflist ELSEIF LRB exp RRB stmt
Rule 49    relopexp -> exp GT exp
Rule 50    relopexp -> exp LT exp
Rule 51    relopexp -> exp NE exp
Rule 52    relopexp -> exp EQ exp
Rule 53    relopexp -> exp GE exp
Rule 54    relopexp -> exp LE exp
Rule 55    otherop -> exp AND exp
Rule 56    otherop -> exp OR exp
Rule 57    otherop -> exp SUM exp
Rule 58    otherop -> exp SUB exp
Rule 59    otherop -> exp MUL exp
Rule 60    otherop -> exp DIV exp
Rule 61    otherop -> exp MOD exp
Rule 62    exp -> ID ASSIGN exp
Rule 63    exp -> ID LSB exp RSB ASSIGN exp
Rule 64    exp -> relopexp
Rule 65    exp -> otherop
Rule 66    exp -> const
Rule 67    exp -> ID
Rule 68    exp -> ID LSB exp RSB
Rule 69    exp -> ID LRB explist RRB
Rule 70    exp -> LRB exp RRB
Rule 71    exp -> ID LRB RRB
Rule 72    exp -> SUB exp
Rule 73    exp -> NOT exp
Rule 74    const -> INTEGERNUMBER
Rule 75    const -> FLOATNUMBER
Rule 76    const -> TRUE
Rule 77    const -> FALSE
Rule 78    explist -> exp
Rule 79    explist -> explist COMMA exp

Terminals, with rules where they appear

AND                  : 55
ASSIGN               : 12 62 63
BOOLEAN              : 9
COLON                : 15 16 17 23 24 29 30
COMMA                : 14 22 79
DIV                  : 60
ELSE                 : 44 45
ELSEIF               : 47 48
EQ                   : 52
ERROR                : 
FALSE                : 77
FLOAT                : 8
FLOATNUMBER          : 75
FOR                  : 40 41
FUNCTION             : 16 17 18 19
GE                   : 53
GT                   : 49
ID                   : 10 11 12 16 17 18 19 23 24 41 41 46 62 63 67 68 69 71
IF                   : 42 43 44 45
IN                   : 41
INTEGER              : 7
INTEGERNUMBER        : 74
LCB                  : 25 26 38 39
LE                   : 54
LRB                  : 1 2 16 17 18 19 37 38 39 40 41 42 43 44 45 46 47 48 69 70 71
LSB                  : 11 24 63 68
LT                   : 50
MAIN                 : 1 2
MOD                  : 61
MUL                  : 59
NE                   : 51
NOT                  : 73
ON                   : 38 39
OPERATOR             : 
OR                   : 56
PRINT                : 46
RCB                  : 25 26 38 39
RETURN               : 33
RRB                  : 1 2 16 17 18 19 37 38 39 40 41 42 43 44 45 46 47 48 69 70 71
RSB                  : 11 24 63 68
SEMICOLON            : 15 33 34 38 39 40 40 46
SUB                  : 58 72
SUM                  : 57
TRUE                 : 76
WHERE                : 29 30
WHILE                : 37
error                : 

Nonterminals, with rules where they appear

block                : 1 2 16 17 18 19 35
case                 : 31 32
cases                : 32 38
const                : 29 30 66
dec                  : 3 4
declist              : 1 4
elseiflist           : 42 44 48
exp                  : 11 12 33 34 37 38 39 40 40 40 42 43 44 45 47 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 63 63 68 70 72 73 78 79
explist              : 69 79
funcdec              : 6
iddec                : 13 14
idlist               : 14 15
otherop              : 65
paramdec             : 21 22
paramdecs            : 16 18
paramdecslist        : 20 22
program              : 0
relopexp             : 64
stmt                 : 27 28 37 40 41 42 43 44 44 45 45 47 48
stmtlist             : 25 28 29
type                 : 15 16 17 23 24
vardec               : 5 36

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declist MAIN LRB RRB block
    (2) program -> . MAIN LRB RRB block
    (3) declist -> . dec
    (4) declist -> . declist dec
    (5) dec -> . vardec
    (6) dec -> . funcdec
    (15) vardec -> . idlist COLON type SEMICOLON
    (16) funcdec -> . FUNCTION ID LRB paramdecs RRB COLON type block
    (17) funcdec -> . FUNCTION ID LRB RRB COLON type block
    (18) funcdec -> . FUNCTION ID LRB paramdecs RRB block
    (19) funcdec -> . FUNCTION ID LRB RRB block
    (13) idlist -> . iddec
    (14) idlist -> . idlist COMMA iddec
    (10) iddec -> . ID
    (11) iddec -> . ID LSB exp RSB
    (12) iddec -> . ID ASSIGN exp

    MAIN            shift and go to state 3
    FUNCTION        shift and go to state 8
    ID              shift and go to state 9

    program                        shift and go to state 1
    declist                        shift and go to state 2
    dec                            shift and go to state 4
    vardec                         shift and go to state 5
    funcdec                        shift and go to state 6
    idlist                         shift and go to state 7
    iddec                          shift and go to state 10

state 1

    (0) S' -> program .



state 2

    (1) program -> declist . MAIN LRB RRB block
    (4) declist -> declist . dec
    (5) dec -> . vardec
    (6) dec -> . funcdec
    (15) vardec -> . idlist COLON type SEMICOLON
    (16) funcdec -> . FUNCTION ID LRB paramdecs RRB COLON type block
    (17) funcdec -> . FUNCTION ID LRB RRB COLON type block
    (18) funcdec -> . FUNCTION ID LRB paramdecs RRB block
    (19) funcdec -> . FUNCTION ID LRB RRB block
    (13) idlist -> . iddec
    (14) idlist -> . idlist COMMA iddec
    (10) iddec -> . ID
    (11) iddec -> . ID LSB exp RSB
    (12) iddec -> . ID ASSIGN exp

    MAIN            shift and go to state 11
    FUNCTION        shift and go to state 8
    ID              shift and go to state 9

    dec                            shift and go to state 12
    vardec                         shift and go to state 5
    funcdec                        shift and go to state 6
    idlist                         shift and go to state 7
    iddec                          shift and go to state 10

state 3

    (2) program -> MAIN . LRB RRB block

    LRB             shift and go to state 13


state 4

    (3) declist -> dec .

    MAIN            reduce using rule 3 (declist -> dec .)
    FUNCTION        reduce using rule 3 (declist -> dec .)
    ID              reduce using rule 3 (declist -> dec .)


state 5

    (5) dec -> vardec .

    MAIN            reduce using rule 5 (dec -> vardec .)
    FUNCTION        reduce using rule 5 (dec -> vardec .)
    ID              reduce using rule 5 (dec -> vardec .)


state 6

    (6) dec -> funcdec .

    MAIN            reduce using rule 6 (dec -> funcdec .)
    FUNCTION        reduce using rule 6 (dec -> funcdec .)
    ID              reduce using rule 6 (dec -> funcdec .)


state 7

    (15) vardec -> idlist . COLON type SEMICOLON
    (14) idlist -> idlist . COMMA iddec

    COLON           shift and go to state 14
    COMMA           shift and go to state 15


state 8

    (16) funcdec -> FUNCTION . ID LRB paramdecs RRB COLON type block
    (17) funcdec -> FUNCTION . ID LRB RRB COLON type block
    (18) funcdec -> FUNCTION . ID LRB paramdecs RRB block
    (19) funcdec -> FUNCTION . ID LRB RRB block

    ID              shift and go to state 16


state 9

    (10) iddec -> ID .
    (11) iddec -> ID . LSB exp RSB
    (12) iddec -> ID . ASSIGN exp

    COLON           reduce using rule 10 (iddec -> ID .)
    COMMA           reduce using rule 10 (iddec -> ID .)
    LSB             shift and go to state 17
    ASSIGN          shift and go to state 18


state 10

    (13) idlist -> iddec .

    COLON           reduce using rule 13 (idlist -> iddec .)
    COMMA           reduce using rule 13 (idlist -> iddec .)


state 11

    (1) program -> declist MAIN . LRB RRB block

    LRB             shift and go to state 19


state 12

    (4) declist -> declist dec .

    MAIN            reduce using rule 4 (declist -> declist dec .)
    FUNCTION        reduce using rule 4 (declist -> declist dec .)
    ID              reduce using rule 4 (declist -> declist dec .)


state 13

    (2) program -> MAIN LRB . RRB block

    RRB             shift and go to state 20


state 14

    (15) vardec -> idlist COLON . type SEMICOLON
    (7) type -> . INTEGER
    (8) type -> . FLOAT
    (9) type -> . BOOLEAN

    INTEGER         shift and go to state 22
    FLOAT           shift and go to state 23
    BOOLEAN         shift and go to state 24

    type                           shift and go to state 21

state 15

    (14) idlist -> idlist COMMA . iddec
    (10) iddec -> . ID
    (11) iddec -> . ID LSB exp RSB
    (12) iddec -> . ID ASSIGN exp

    ID              shift and go to state 9

    iddec                          shift and go to state 25

state 16

    (16) funcdec -> FUNCTION ID . LRB paramdecs RRB COLON type block
    (17) funcdec -> FUNCTION ID . LRB RRB COLON type block
    (18) funcdec -> FUNCTION ID . LRB paramdecs RRB block
    (19) funcdec -> FUNCTION ID . LRB RRB block

    LRB             shift and go to state 26


state 17

    (11) iddec -> ID LSB . exp RSB
    (62) exp -> . ID ASSIGN exp
    (63) exp -> . ID LSB exp RSB ASSIGN exp
    (64) exp -> . relopexp
    (65) exp -> . otherop
    (66) exp -> . const
    (67) exp -> . ID
    (68) exp -> . ID LSB exp RSB
    (69) exp -> . ID LRB explist RRB
    (70) exp -> . LRB exp RRB
    (71) exp -> . ID LRB RRB
    (72) exp -> . SUB exp
    (73) exp -> . NOT exp
    (49) relopexp -> . exp GT exp
    (50) relopexp -> . exp LT exp
    (51) relopexp -> . exp NE exp
    (52) relopexp -> . exp EQ exp
    (53) relopexp -> . exp GE exp
    (54) relopexp -> . exp LE exp
    (55) otherop -> . exp AND exp
    (56) otherop -> . exp OR exp
    (57) otherop -> . exp SUM exp
    (58) otherop -> . exp SUB exp
    (59) otherop -> . exp MUL exp
    (60) otherop -> . exp DIV exp
    (61) otherop -> . exp MOD exp
    (74) const -> . INTEGERNUMBER
    (75) const -> . FLOATNUMBER
    (76) const -> . TRUE
    (77) const -> . FALSE

    ID              shift and go to state 27
    LRB             shift and go to state 32
    SUB             shift and go to state 33
    NOT             shift and go to state 34
    INTEGERNUMBER   shift and go to state 35
    FLOATNUMBER     shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    exp                            shift and go to state 28
    relopexp                       shift and go to state 29
    otherop                        shift and go to state 30
    const                          shift and go to state 31

state 18

    (12) iddec -> ID ASSIGN . exp
    (62) exp -> . ID ASSIGN exp
    (63) exp -> . ID LSB exp RSB ASSIGN exp
    (64) exp -> . relopexp
    (65) exp -> . otherop
    (66) exp -> . const
    (67) exp -> . ID
    (68) exp -> . ID LSB exp RSB
    (69) exp -> . ID LRB explist RRB
    (70) exp -> . LRB exp RRB
    (71) exp -> . ID LRB RRB
    (72) exp -> . SUB exp
    (73) exp -> . NOT exp
    (49) relopexp -> . exp GT exp
    (50) relopexp -> . exp LT exp
    (51) relopexp -> . exp NE exp
    (52) relopexp -> . exp EQ exp
    (53) relopexp -> . exp GE exp
    (54) relopexp -> . exp LE exp
    (55) otherop -> . exp AND exp
    (56) otherop -> . exp OR exp
    (57) otherop -> . exp SUM exp
    (58) otherop -> . exp SUB exp
    (59) otherop -> . exp MUL exp
    (60) otherop -> . exp DIV exp
    (61) otherop -> . exp MOD exp
    (74) const -> . INTEGERNUMBER
    (75) const -> . FLOATNUMBER
    (76) const -> . TRUE
    (77) const -> . FALSE

    ID              shift and go to state 27
    LRB             shift and go to state 32
    SUB             shift and go to state 33
    NOT             shift and go to state 34
    INTEGERNUMBER   shift and go to state 35
    FLOATNUMBER     shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    exp                            shift and go to state 39
    relopexp                       shift and go to state 29
    otherop                        shift and go to state 30
    const                          shift and go to state 31

state 19

    (1) program -> declist MAIN LRB . RRB block

    RRB             shift and go to state 40


state 20

    (2) program -> MAIN LRB RRB . block
    (25) block -> . LCB stmtlist RCB
    (26) block -> . LCB RCB

    LCB             shift and go to state 42

    block                          shift and go to state 41

state 21

    (15) vardec -> idlist COLON type . SEMICOLON

    SEMICOLON       shift and go to state 43


state 22

    (7) type -> INTEGER .

    SEMICOLON       reduce using rule 7 (type -> INTEGER .)
    COMMA           reduce using rule 7 (type -> INTEGER .)
    RRB             reduce using rule 7 (type -> INTEGER .)
    LCB             reduce using rule 7 (type -> INTEGER .)


state 23

    (8) type -> FLOAT .

    SEMICOLON       reduce using rule 8 (type -> FLOAT .)
    COMMA           reduce using rule 8 (type -> FLOAT .)
    RRB             reduce using rule 8 (type -> FLOAT .)
    LCB             reduce using rule 8 (type -> FLOAT .)


state 24

    (9) type -> BOOLEAN .

    SEMICOLON       reduce using rule 9 (type -> BOOLEAN .)
    COMMA           reduce using rule 9 (type -> BOOLEAN .)
    RRB             reduce using rule 9 (type -> BOOLEAN .)
    LCB             reduce using rule 9 (type -> BOOLEAN .)


state 25

    (14) idlist -> idlist COMMA iddec .

    COLON           reduce using rule 14 (idlist -> idlist COMMA iddec .)
    COMMA           reduce using rule 14 (idlist -> idlist COMMA iddec .)


state 26

    (16) funcdec -> FUNCTION ID LRB . paramdecs RRB COLON type block
    (17) funcdec -> FUNCTION ID LRB . RRB COLON type block
    (18) funcdec -> FUNCTION ID LRB . paramdecs RRB block
    (19) funcdec -> FUNCTION ID LRB . RRB block
    (20) paramdecs -> . paramdecslist
    (21) paramdecslist -> . paramdec
    (22) paramdecslist -> . paramdecslist COMMA paramdec
    (23) paramdec -> . ID COLON type
    (24) paramdec -> . ID LSB RSB COLON type

    RRB             shift and go to state 46
    ID              shift and go to state 44

    paramdecs                      shift and go to state 45
    paramdecslist                  shift and go to state 47
    paramdec                       shift and go to state 48

state 27

    (62) exp -> ID . ASSIGN exp
    (63) exp -> ID . LSB exp RSB ASSIGN exp
    (67) exp -> ID .
    (68) exp -> ID . LSB exp RSB
    (69) exp -> ID . LRB explist RRB
    (71) exp -> ID . LRB RRB

    ASSIGN          shift and go to state 49
    LSB             shift and go to state 50
    RSB             reduce using rule 67 (exp -> ID .)
    GT              reduce using rule 67 (exp -> ID .)
    LT              reduce using rule 67 (exp -> ID .)
    NE              reduce using rule 67 (exp -> ID .)
    EQ              reduce using rule 67 (exp -> ID .)
    GE              reduce using rule 67 (exp -> ID .)
    LE              reduce using rule 67 (exp -> ID .)
    AND             reduce using rule 67 (exp -> ID .)
    OR              reduce using rule 67 (exp -> ID .)
    SUM             reduce using rule 67 (exp -> ID .)
    SUB             reduce using rule 67 (exp -> ID .)
    MUL             reduce using rule 67 (exp -> ID .)
    DIV             reduce using rule 67 (exp -> ID .)
    MOD             reduce using rule 67 (exp -> ID .)
    COLON           reduce using rule 67 (exp -> ID .)
    COMMA           reduce using rule 67 (exp -> ID .)
    RRB             reduce using rule 67 (exp -> ID .)
    SEMICOLON       reduce using rule 67 (exp -> ID .)
    LRB             shift and go to state 51


state 28

    (11) iddec -> ID LSB exp . RSB
    (49) relopexp -> exp . GT exp
    (50) relopexp -> exp . LT exp
    (51) relopexp -> exp . NE exp
    (52) relopexp -> exp . EQ exp
    (53) relopexp -> exp . GE exp
    (54) relopexp -> exp . LE exp
    (55) otherop -> exp . AND exp
    (56) otherop -> exp . OR exp
    (57) otherop -> exp . SUM exp
    (58) otherop -> exp . SUB exp
    (59) otherop -> exp . MUL exp
    (60) otherop -> exp . DIV exp
    (61) otherop -> exp . MOD exp

    RSB             shift and go to state 52
    GT              shift and go to state 53
    LT              shift and go to state 54
    NE              shift and go to state 55
    EQ              shift and go to state 56
    GE              shift and go to state 57
    LE              shift and go to state 58
    AND             shift and go to state 59
    OR              shift and go to state 60
    SUM             shift and go to state 61
    SUB             shift and go to state 62
    MUL             shift and go to state 63
    DIV             shift and go to state 64
    MOD             shift and go to state 65


state 29

    (64) exp -> relopexp .

    RSB             reduce using rule 64 (exp -> relopexp .)
    GT              reduce using rule 64 (exp -> relopexp .)
    LT              reduce using rule 64 (exp -> relopexp .)
    NE              reduce using rule 64 (exp -> relopexp .)
    EQ              reduce using rule 64 (exp -> relopexp .)
    GE              reduce using rule 64 (exp -> relopexp .)
    LE              reduce using rule 64 (exp -> relopexp .)
    AND             reduce using rule 64 (exp -> relopexp .)
    OR              reduce using rule 64 (exp -> relopexp .)
    SUM             reduce using rule 64 (exp -> relopexp .)
    SUB             reduce using rule 64 (exp -> relopexp .)
    MUL             reduce using rule 64 (exp -> relopexp .)
    DIV             reduce using rule 64 (exp -> relopexp .)
    MOD             reduce using rule 64 (exp -> relopexp .)
    COLON           reduce using rule 64 (exp -> relopexp .)
    COMMA           reduce using rule 64 (exp -> relopexp .)
    RRB             reduce using rule 64 (exp -> relopexp .)
    SEMICOLON       reduce using rule 64 (exp -> relopexp .)


state 30

    (65) exp -> otherop .

    RSB             reduce using rule 65 (exp -> otherop .)
    GT              reduce using rule 65 (exp -> otherop .)
    LT              reduce using rule 65 (exp -> otherop .)
    NE              reduce using rule 65 (exp -> otherop .)
    EQ              reduce using rule 65 (exp -> otherop .)
    GE              reduce using rule 65 (exp -> otherop .)
    LE              reduce using rule 65 (exp -> otherop .)
    AND             reduce using rule 65 (exp -> otherop .)
    OR              reduce using rule 65 (exp -> otherop .)
    SUM             reduce using rule 65 (exp -> otherop .)
    SUB             reduce using rule 65 (exp -> otherop .)
    MUL             reduce using rule 65 (exp -> otherop .)
    DIV             reduce using rule 65 (exp -> otherop .)
    MOD             reduce using rule 65 (exp -> otherop .)
    COLON           reduce using rule 65 (exp -> otherop .)
    COMMA           reduce using rule 65 (exp -> otherop .)
    RRB             reduce using rule 65 (exp -> otherop .)
    SEMICOLON       reduce using rule 65 (exp -> otherop .)


state 31

    (66) exp -> const .

    RSB             reduce using rule 66 (exp -> const .)
    GT              reduce using rule 66 (exp -> const .)
    LT              reduce using rule 66 (exp -> const .)
    NE              reduce using rule 66 (exp -> const .)
    EQ              reduce using rule 66 (exp -> const .)
    GE              reduce using rule 66 (exp -> const .)
    LE              reduce using rule 66 (exp -> const .)
    AND             reduce using rule 66 (exp -> const .)
    OR              reduce using rule 66 (exp -> const .)
    SUM             reduce using rule 66 (exp -> const .)
    SUB             reduce using rule 66 (exp -> const .)
    MUL             reduce using rule 66 (exp -> const .)
    DIV             reduce using rule 66 (exp -> const .)
    MOD             reduce using rule 66 (exp -> const .)
    COLON           reduce using rule 66 (exp -> const .)
    COMMA           reduce using rule 66 (exp -> const .)
    RRB             reduce using rule 66 (exp -> const .)
    SEMICOLON       reduce using rule 66 (exp -> const .)


state 32

    (70) exp -> LRB . exp RRB
    (62) exp -> . ID ASSIGN exp
    (63) exp -> . ID LSB exp RSB ASSIGN exp
    (64) exp -> . relopexp
    (65) exp -> . otherop
    (66) exp -> . const
    (67) exp -> . ID
    (68) exp -> . ID LSB exp RSB
    (69) exp -> . ID LRB explist RRB
    (70) exp -> . LRB exp RRB
    (71) exp -> . ID LRB RRB
    (72) exp -> . SUB exp
    (73) exp -> . NOT exp
    (49) relopexp -> . exp GT exp
    (50) relopexp -> . exp LT exp
    (51) relopexp -> . exp NE exp
    (52) relopexp -> . exp EQ exp
    (53) relopexp -> . exp GE exp
    (54) relopexp -> . exp LE exp
    (55) otherop -> . exp AND exp
    (56) otherop -> . exp OR exp
    (57) otherop -> . exp SUM exp
    (58) otherop -> . exp SUB exp
    (59) otherop -> . exp MUL exp
    (60) otherop -> . exp DIV exp
    (61) otherop -> . exp MOD exp
    (74) const -> . INTEGERNUMBER
    (75) const -> . FLOATNUMBER
    (76) const -> . TRUE
    (77) const -> . FALSE

    ID              shift and go to state 27
    LRB             shift and go to state 32
    SUB             shift and go to state 33
    NOT             shift and go to state 34
    INTEGERNUMBER   shift and go to state 35
    FLOATNUMBER     shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    exp                            shift and go to state 66
    relopexp                       shift and go to state 29
    otherop                        shift and go to state 30
    const                          shift and go to state 31

state 33

    (72) exp -> SUB . exp
    (62) exp -> . ID ASSIGN exp
    (63) exp -> . ID LSB exp RSB ASSIGN exp
    (64) exp -> . relopexp
    (65) exp -> . otherop
    (66) exp -> . const
    (67) exp -> . ID
    (68) exp -> . ID LSB exp RSB
    (69) exp -> . ID LRB explist RRB
    (70) exp -> . LRB exp RRB
    (71) exp -> . ID LRB RRB
    (72) exp -> . SUB exp
    (73) exp -> . NOT exp
    (49) relopexp -> . exp GT exp
    (50) relopexp -> . exp LT exp
    (51) relopexp -> . exp NE exp
    (52) relopexp -> . exp EQ exp
    (53) relopexp -> . exp GE exp
    (54) relopexp -> . exp LE exp
    (55) otherop -> . exp AND exp
    (56) otherop -> . exp OR exp
    (57) otherop -> . exp SUM exp
    (58) otherop -> . exp SUB exp
    (59) otherop -> . exp MUL exp
    (60) otherop -> . exp DIV exp
    (61) otherop -> . exp MOD exp
    (74) const -> . INTEGERNUMBER
    (75) const -> . FLOATNUMBER
    (76) const -> . TRUE
    (77) const -> . FALSE

    ID              shift and go to state 27
    LRB             shift and go to state 32
    SUB             shift and go to state 33
    NOT             shift and go to state 34
    INTEGERNUMBER   shift and go to state 35
    FLOATNUMBER     shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    exp                            shift and go to state 67
    relopexp                       shift and go to state 29
    otherop                        shift and go to state 30
    const                          shift and go to state 31

state 34

    (73) exp -> NOT . exp
    (62) exp -> . ID ASSIGN exp
    (63) exp -> . ID LSB exp RSB ASSIGN exp
    (64) exp -> . relopexp
    (65) exp -> . otherop
    (66) exp -> . const
    (67) exp -> . ID
    (68) exp -> . ID LSB exp RSB
    (69) exp -> . ID LRB explist RRB
    (70) exp -> . LRB exp RRB
    (71) exp -> . ID LRB RRB
    (72) exp -> . SUB exp
    (73) exp -> . NOT exp
    (49) relopexp -> . exp GT exp
    (50) relopexp -> . exp LT exp
    (51) relopexp -> . exp NE exp
    (52) relopexp -> . exp EQ exp
    (53) relopexp -> . exp GE exp
    (54) relopexp -> . exp LE exp
    (55) otherop -> . exp AND exp
    (56) otherop -> . exp OR exp
    (57) otherop -> . exp SUM exp
    (58) otherop -> . exp SUB exp
    (59) otherop -> . exp MUL exp
    (60) otherop -> . exp DIV exp
    (61) otherop -> . exp MOD exp
    (74) const -> . INTEGERNUMBER
    (75) const -> . FLOATNUMBER
    (76) const -> . TRUE
    (77) const -> . FALSE

    ID              shift and go to state 27
    LRB             shift and go to state 32
    SUB             shift and go to state 33
    NOT             shift and go to state 34
    INTEGERNUMBER   shift and go to state 35
    FLOATNUMBER     shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    exp                            shift and go to state 68
    relopexp                       shift and go to state 29
    otherop                        shift and go to state 30
    const                          shift and go to state 31

state 35

    (74) const -> INTEGERNUMBER .

    RSB             reduce using rule 74 (const -> INTEGERNUMBER .)
    GT              reduce using rule 74 (const -> INTEGERNUMBER .)
    LT              reduce using rule 74 (const -> INTEGERNUMBER .)
    NE              reduce using rule 74 (const -> INTEGERNUMBER .)
    EQ              reduce using rule 74 (const -> INTEGERNUMBER .)
    GE              reduce using rule 74 (const -> INTEGERNUMBER .)
    LE              reduce using rule 74 (const -> INTEGERNUMBER .)
    AND             reduce using rule 74 (const -> INTEGERNUMBER .)
    OR              reduce using rule 74 (const -> INTEGERNUMBER .)
    SUM             reduce using rule 74 (const -> INTEGERNUMBER .)
    SUB             reduce using rule 74 (const -> INTEGERNUMBER .)
    MUL             reduce using rule 74 (const -> INTEGERNUMBER .)
    DIV             reduce using rule 74 (const -> INTEGERNUMBER .)
    MOD             reduce using rule 74 (const -> INTEGERNUMBER .)
    COLON           reduce using rule 74 (const -> INTEGERNUMBER .)
    COMMA           reduce using rule 74 (const -> INTEGERNUMBER .)
    RRB             reduce using rule 74 (const -> INTEGERNUMBER .)
    SEMICOLON       reduce using rule 74 (const -> INTEGERNUMBER .)


state 36

    (75) const -> FLOATNUMBER .

    RSB             reduce using rule 75 (const -> FLOATNUMBER .)
    GT              reduce using rule 75 (const -> FLOATNUMBER .)
    LT              reduce using rule 75 (const -> FLOATNUMBER .)
    NE              reduce using rule 75 (const -> FLOATNUMBER .)
    EQ              reduce using rule 75 (const -> FLOATNUMBER .)
    GE              reduce using rule 75 (const -> FLOATNUMBER .)
    LE              reduce using rule 75 (const -> FLOATNUMBER .)
    AND             reduce using rule 75 (const -> FLOATNUMBER .)
    OR              reduce using rule 75 (const -> FLOATNUMBER .)
    SUM             reduce using rule 75 (const -> FLOATNUMBER .)
    SUB             reduce using rule 75 (const -> FLOATNUMBER .)
    MUL             reduce using rule 75 (const -> FLOATNUMBER .)
    DIV             reduce using rule 75 (const -> FLOATNUMBER .)
    MOD             reduce using rule 75 (const -> FLOATNUMBER .)
    COLON           reduce using rule 75 (const -> FLOATNUMBER .)
    COMMA           reduce using rule 75 (const -> FLOATNUMBER .)
    RRB             reduce using rule 75 (const -> FLOATNUMBER .)
    SEMICOLON       reduce using rule 75 (const -> FLOATNUMBER .)


state 37

    (76) const -> TRUE .

    RSB             reduce using rule 76 (const -> TRUE .)
    GT              reduce using rule 76 (const -> TRUE .)
    LT              reduce using rule 76 (const -> TRUE .)
    NE              reduce using rule 76 (const -> TRUE .)
    EQ              reduce using rule 76 (const -> TRUE .)
    GE              reduce using rule 76 (const -> TRUE .)
    LE              reduce using rule 76 (const -> TRUE .)
    AND             reduce using rule 76 (const -> TRUE .)
    OR              reduce using rule 76 (const -> TRUE .)
    SUM             reduce using rule 76 (const -> TRUE .)
    SUB             reduce using rule 76 (const -> TRUE .)
    MUL             reduce using rule 76 (const -> TRUE .)
    DIV             reduce using rule 76 (const -> TRUE .)
    MOD             reduce using rule 76 (const -> TRUE .)
    COLON           reduce using rule 76 (const -> TRUE .)
    COMMA           reduce using rule 76 (const -> TRUE .)
    RRB             reduce using rule 76 (const -> TRUE .)
    SEMICOLON       reduce using rule 76 (const -> TRUE .)


state 38

    (77) const -> FALSE .

    RSB             reduce using rule 77 (const -> FALSE .)
    GT              reduce using rule 77 (const -> FALSE .)
    LT              reduce using rule 77 (const -> FALSE .)
    NE              reduce using rule 77 (const -> FALSE .)
    EQ              reduce using rule 77 (const -> FALSE .)
    GE              reduce using rule 77 (const -> FALSE .)
    LE              reduce using rule 77 (const -> FALSE .)
    AND             reduce using rule 77 (const -> FALSE .)
    OR              reduce using rule 77 (const -> FALSE .)
    SUM             reduce using rule 77 (const -> FALSE .)
    SUB             reduce using rule 77 (const -> FALSE .)
    MUL             reduce using rule 77 (const -> FALSE .)
    DIV             reduce using rule 77 (const -> FALSE .)
    MOD             reduce using rule 77 (const -> FALSE .)
    COLON           reduce using rule 77 (const -> FALSE .)
    COMMA           reduce using rule 77 (const -> FALSE .)
    RRB             reduce using rule 77 (const -> FALSE .)
    SEMICOLON       reduce using rule 77 (const -> FALSE .)


state 39

    (12) iddec -> ID ASSIGN exp .
    (49) relopexp -> exp . GT exp
    (50) relopexp -> exp . LT exp
    (51) relopexp -> exp . NE exp
    (52) relopexp -> exp . EQ exp
    (53) relopexp -> exp . GE exp
    (54) relopexp -> exp . LE exp
    (55) otherop -> exp . AND exp
    (56) otherop -> exp . OR exp
    (57) otherop -> exp . SUM exp
    (58) otherop -> exp . SUB exp
    (59) otherop -> exp . MUL exp
    (60) otherop -> exp . DIV exp
    (61) otherop -> exp . MOD exp

    COLON           reduce using rule 12 (iddec -> ID ASSIGN exp .)
    COMMA           reduce using rule 12 (iddec -> ID ASSIGN exp .)
    GT              shift and go to state 53
    LT              shift and go to state 54
    NE              shift and go to state 55
    EQ              shift and go to state 56
    GE              shift and go to state 57
    LE              shift and go to state 58
    AND             shift and go to state 59
    OR              shift and go to state 60
    SUM             shift and go to state 61
    SUB             shift and go to state 62
    MUL             shift and go to state 63
    DIV             shift and go to state 64
    MOD             shift and go to state 65


state 40

    (1) program -> declist MAIN LRB RRB . block
    (25) block -> . LCB stmtlist RCB
    (26) block -> . LCB RCB

    LCB             shift and go to state 42

    block                          shift and go to state 69

state 41
